name:                scotty-example
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable scotty-example1
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Shapes,Ansi
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.5
                     , blaze-html
                     , blaze-svg
                     , blaze-markup
                     , scotty
                     , text

  default-language:    Haskell2010

